adicao dos meus exercicios(1,5,9,10)