@@ -12,17 +12,20 @@ import java.nio.file.Paths;
 import java.time.DayOfWeek;
 import java.time.LocalDateTime;
 import java.time.Month;
+import java.time.temporal.ChronoUnit;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static java.lang.System.out;
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
+import static java.time.temporal.TemporalAdjusters.firstDayOfYear;
+import static java.util.stream.Collectors.*;
 
 
 public class BenchJavaStreams {
@@ -159,7 +162,7 @@ public class BenchJavaStreams {
                     List<SimpleEntry<String, SimpleEntry<Double, SimpleEntry>>> resultadosResourceI = new ArrayList<>();
                     for (SimpleEntry<String, Function> supSolucao : solucoesTi) {
                         System.out.println("A fazer para " + i * 1000000 + "...");
-                        SimpleEntry<Double, SimpleEntry> res = testeBoxGenW((Supplier<SimpleEntry>) supSolucao.getValue().apply(List.of(i * 1000000)));
+                        SimpleEntry<Double, SimpleEntry> res = testeBoxGenW((Supplier<SimpleEntry>) supSolucao.getValue().apply(Arrays.asList(i * 1000000)));
                         resultadosResourceI.add(new SimpleEntry<>(supSolucao.getKey(), res));
                     }
                     resultadosTi.add(resultadosResourceI);
@@ -221,6 +224,70 @@ public class BenchJavaStreams {
         printWriter.close();
     }
 
+    /*
+     *  SOLUÇOES PARA O TESTE 1
+     */
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ForArraySum = ltc -> () -> {
+        double[] doubleArr = ltc.stream().mapToDouble(TransCaixa::getValor).toArray();
+        double sum = 0;
+        for (int i = 0; i < doubleArr.length; sum+= doubleArr[i], i++);
+
+        return new SimpleEntry<>(sum, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ForArrayAvg = ltc -> () -> {
+        double[] doubleArr = ltc.stream().mapToDouble(TransCaixa::getValor).toArray();
+        double sum = 0;
+        double count = 0;
+        for (int i = 0; i < doubleArr.length; sum += doubleArr[i], i++, count++);
+        return new SimpleEntry<>(sum/count, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ForEachSum = ltc -> () -> {
+        double[] doubleArr = ltc.stream().mapToDouble(TransCaixa::getValor).toArray();
+        double sum = 0;
+        for (double val : doubleArr) {
+            sum += val;
+        }
+        return new SimpleEntry<>(sum, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ForEachAvg = ltc -> () -> {
+        double[] doublAarr = ltc.stream().mapToDouble(TransCaixa::getValor).toArray();
+        double sum = 0;
+        double count = 0;
+        for (double val : doublAarr) {
+            sum += val;
+            count++;
+        }
+        return new SimpleEntry<>(sum/count, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1DoubleStreamSum = ltc -> () -> new SimpleEntry<>(ltc.stream().mapToDouble(TransCaixa::getValor).sum(), null);
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1DoubleStreamAvg = ltc -> () -> new SimpleEntry<>(ltc.stream().mapToDouble(TransCaixa::getValor).average().getAsDouble(), null);
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ParallelDoubleStreamSum = ltc -> () -> new SimpleEntry<>(ltc.parallelStream().mapToDouble(TransCaixa::getValor).sum(), null);
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ParallelDoubleStreamAvg = ltc -> () -> new SimpleEntry<>(ltc.parallelStream().mapToDouble(TransCaixa::getValor).average().getAsDouble(), null);
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1StreamSum = ltc -> () -> new SimpleEntry<>(ltc.stream().map(TransCaixa::getValor).reduce(0.0, (x1, x2) -> (Double) x1 + (Double) x2), null);
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1StreamAvg = ltc -> () -> {
+        AtomicReference<Double> sum = new AtomicReference<>((double) 0);
+        AtomicReference<Double> count = new AtomicReference<>((double) 0);
+
+        ltc.stream().forEach(t -> { sum.updateAndGet(v -> new Double((double) (v + t.getValor()))); count.updateAndGet(v -> new Double((double) (v + 1))); });
+
+        return new SimpleEntry<>(sum.get() / count.get(), null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ParallelStreamSum = ltc -> () -> new SimpleEntry<>(ltc.parallelStream().map(TransCaixa::getValor).reduce(0.0, (x1, x2) -> (Double) x1 + (Double) x2), null);
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao1ParallelStreamAvg = ltc -> () -> {
+        SimpleEntry<Double,Double> countAndSum = ltc.parallelStream().map((TransCaixa t) -> new SimpleEntry<>(1.0, t.getValor())).reduce(new SimpleEntry<>(0.0,0.0),
+                (SimpleEntry<Double,Double> a, SimpleEntry<Double,Double> b) -> new SimpleEntry<>(a.getKey()+b.getKey(), a.getValue() + b.getValue()));
+
+        return new SimpleEntry<>(countAndSum.getValue() / countAndSum.getKey(), null);
+    };
 
     /*
      *  SOLUÇÕES PARA O TESTE 2
@@ -241,8 +308,8 @@ public class BenchJavaStreams {
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao2S = ltc -> () -> {
         int size = ltc.size();
         List<TransCaixa> sortedList = ltc.stream()
-                                         .sorted(transCaixaComparator)
-                                         .collect(toList());
+                .sorted(transCaixaComparator)
+                .collect(toList());
         List<TransCaixa> l1 = sortedList.subList(0, size/3);
         List<TransCaixa> l2 = sortedList.subList(size - size/3, size);
         return new SimpleEntry<>(l1, l2);
@@ -250,8 +317,8 @@ public class BenchJavaStreams {
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao2PS = ltc -> () -> {
         int size = ltc.size();
         List<TransCaixa> sortedList = ltc.parallelStream()
-                                         .sorted(transCaixaComparator)
-                                         .collect(toList());
+                .sorted(transCaixaComparator)
+                .collect(toList());
         List<TransCaixa> l1 = sortedList.subList(0, size/3);
         List<TransCaixa> l2 = sortedList.subList(size - size/3, size);
         return new SimpleEntry<>(l1, l2);
@@ -290,10 +357,10 @@ public class BenchJavaStreams {
      * SOLUÇÕES PARA O TESTE 3
      */
 
-     private static Function<List<Integer>, Supplier<SimpleEntry>> solucao3intStream = ltc -> () -> {
-         IntStream array = new Random().ints(ltc.get(0), 0, 9999).distinct();
-         return new SimpleEntry<>(array, null);
-     };
+    private static Function<List<Integer>, Supplier<SimpleEntry>> solucao3intStream = ltc -> () -> {
+        IntStream array = new Random().ints(ltc.get(0), 0, 9999).distinct();
+        return new SimpleEntry<>(array, null);
+    };
 
     public static int randomFill(){
         Random rand = new Random();
@@ -310,12 +377,12 @@ public class BenchJavaStreams {
             randomArray[i]= randomFill();
         }
         int finalSize = randomArray.length;
-         for(int i=0; i< finalSize; i++){
+        for(int i=0; i< finalSize; i++){
             for(int j= i+1; j< finalSize; j++){
                 if(randomArray[i]== randomArray[j]){
-                   randomArray[j]=randomArray[finalSize-1];
-                   finalSize --;
-                   j--;
+                    randomArray[j]=randomArray[finalSize-1];
+                    finalSize --;
+                    j--;
                 }
             }
         }
@@ -402,6 +469,24 @@ public class BenchJavaStreams {
 
 */
 
+
+    /*
+     *  SOLUÇÕES PARA O TESTE 5
+     */
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao5TreeSet = ltc -> () -> {
+        Comparator<TransCaixa> compexc2 = Comparator.comparing(TransCaixa::getTrans);
+
+        Supplier<TreeSet<TransCaixa>> supplyTreeSet = () -> new TreeSet<>(compexc2);
+
+        return new SimpleEntry<>(ltc.stream().collect(toCollection(supplyTreeSet)), null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao5SortedList = ltc -> () -> {
+        Comparator<TransCaixa> compexc2 = Comparator.comparing(TransCaixa::getTrans);
+        return new SimpleEntry<>(ltc.stream().sorted(compexc2).collect(Collectors.toList()), null);
+    };
+
     /*
      *  SOLUÇÕES PARA O TESTE 6
      */
@@ -410,8 +495,8 @@ public class BenchJavaStreams {
         Map<Month, Map<Integer, Map<Integer, List<TransCaixa>>>> mapaTxPorMDH =
                 ltc.stream()
                         .collect(groupingBy(t -> t.getData().getMonth(),
-                                                 groupingBy(t -> t.getData().getDayOfMonth(),
-                                                                 groupingBy(t -> t.getData().getHour()))));
+                                groupingBy(t -> t.getData().getDayOfMonth(),
+                                        groupingBy(t -> t.getData().getHour()))));
         return new SimpleEntry<>(mapaTxPorMDH, null);
     };
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao6MDHPS = ltc -> () -> {
@@ -440,7 +525,7 @@ public class BenchJavaStreams {
                         new ArrayList<>());
             }
             else if (!mapaTxPorMDH.get(mes).containsKey(dia)) {
-                mapaTxPorMDH.get(mes).put(                          
+                mapaTxPorMDH.get(mes).put(
                         dia,
                         new TreeMap<>());
                 mapaTxPorMDH.get(mes).get(dia).put(
@@ -462,7 +547,7 @@ public class BenchJavaStreams {
         Map<DayOfWeek, Map<Integer, List<TransCaixa>>> mapaTxPorDH =
                 ltc.stream()
                         .collect(groupingBy(t -> t.getData().getDayOfWeek(),
-                                        groupingBy(t -> t.getData().getHour())));
+                                groupingBy(t -> t.getData().getHour())));
         return new SimpleEntry<>(mapaTxPorDH, null);
     };
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao6DHPS = ltc -> () -> {
@@ -629,16 +714,16 @@ public class BenchJavaStreams {
     };
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao8S = ltc -> () -> {
         Optional<TransCaixa> res = ltc.stream()
-                                      .filter(tc -> tc.getData().getHour() >= 16 &&
-                                                    tc.getData().getHour() < 22)
-                                      .max(transCaixaMaxValueComparator);
+                .filter(tc -> tc.getData().getHour() >= 16 &&
+                        tc.getData().getHour() < 22)
+                .max(transCaixaMaxValueComparator);
         return new SimpleEntry<>(res, null);
     };
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao8PS = ltc -> () -> {
         Optional<TransCaixa> res = ltc.parallelStream()
-                                      .filter(tc -> tc.getData().getHour() >= 16 &&
-                                                    tc.getData().getHour() < 22)
-                                      .max(transCaixaMaxValueComparator);
+                .filter(tc -> tc.getData().getHour() >= 16 &&
+                        tc.getData().getHour() < 22)
+                .max(transCaixaMaxValueComparator);
         return new SimpleEntry<>(res, null);
     };
     private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao8L = ltc -> () -> {
@@ -652,7 +737,92 @@ public class BenchJavaStreams {
         return new SimpleEntry<>(max, null);
     };
 
+    /*
+     *  SOLUÇÕES PARA O TESTE 9
+     */
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao9SemStreams = ltc -> () -> {
+        Map<Long, List<TransCaixa>> grupo = ltc.stream().collect(
+                groupingBy((TransCaixa t1) -> ChronoUnit.WEEKS.between(LocalDateTime.now().with(firstDayOfYear()),t1.getData())));
 
+        Map<Long, Double> totalFaturado = new HashMap<>();
+        for (Map.Entry<Long,List<TransCaixa>> entry : grupo.entrySet()) {
+            List<TransCaixa> caixasDaSemana = entry.getValue();
+            double faturaDaSemana = 0;
+
+            for (TransCaixa caixa : caixasDaSemana) {
+                faturaDaSemana += caixa.getValor();
+            }
+
+            totalFaturado.put(entry.getKey(), faturaDaSemana);
+        }
+
+        return new SimpleEntry<>(totalFaturado, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao9ComUmStream = ltc -> () -> {
+        Map<Long, List<TransCaixa>> grupo = ltc.stream().collect(
+                groupingBy((TransCaixa t1) -> ChronoUnit.WEEKS.between(LocalDateTime.now().with(firstDayOfYear()),t1.getData())));
+
+        Map<Long,Double> totalFaturado = new HashMap<>();
+        grupo.entrySet().forEach((Map.Entry<Long,List<TransCaixa>> e) -> totalFaturado.put(e.getKey(), e.getValue().stream().mapToDouble(TransCaixa::getValor).sum()));
+
+        return new SimpleEntry<>(totalFaturado, null);
+    };
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao9ComDoisStreams = ltc -> () -> {
+        Map<Long, List<TransCaixa>> grupo = ltc.stream().collect(
+                groupingBy((TransCaixa t1) -> ChronoUnit.WEEKS.between(LocalDateTime.now().with(firstDayOfYear()),t1.getData())));
+
+        return new SimpleEntry<>(grupo.entrySet()
+                                 .stream()
+                                 .map((Map.Entry<Long,List<TransCaixa>> e)
+                                             -> new SimpleEntry<>(e.getKey(), e.getValue().stream().mapToDouble(TransCaixa::getValor).sum()))
+                                 .collect(Collectors.toMap(SimpleEntry::getKey, SimpleEntry::getValue)), null);
+    };
+
+    /*
+     *  SOLUÇÕES PARA O TESTE 10
+     */
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao10ComStream = ltc -> () ->
+            new SimpleEntry<>(ltc.stream().collect(groupingBy((TransCaixa t) -> t.getData().getMonth(),
+                                    summingDouble((TransCaixa t) -> { double val = t.getValor();
+                                                  return (val < 20) ? ( val*0.12 ) : ( val >= 20 && val <= 29 ) ? ( val * 0.2 ) : ( val * 0.23);
+                                                                    }))) , null);
+
+    private static Function<List<TransCaixa>, Supplier<SimpleEntry>> solucao10Iterativo = ltc -> () -> {
+        HashMap<Month,Double> pagamentosIvasMeses = new HashMap<>();
+        pagamentosIvasMeses.put(Month.JANUARY, 0.0);
+        pagamentosIvasMeses.put(Month.FEBRUARY, 0.0);
+        pagamentosIvasMeses.put(Month.MARCH, 0.0);
+        pagamentosIvasMeses.put(Month.APRIL, 0.0);
+        pagamentosIvasMeses.put(Month.MAY, 0.0);
+        pagamentosIvasMeses.put(Month.JUNE, 0.0);
+        pagamentosIvasMeses.put(Month.JULY, 0.0);
+        pagamentosIvasMeses.put(Month.AUGUST, 0.0);
+        pagamentosIvasMeses.put(Month.SEPTEMBER, 0.0);
+        pagamentosIvasMeses.put(Month.OCTOBER, 0.0);
+        pagamentosIvasMeses.put(Month.NOVEMBER, 0.0);
+        pagamentosIvasMeses.put(Month.DECEMBER, 0.0);
+
+        for (TransCaixa tc : ltc) {
+            Month currMont = tc.getData().getMonth();
+            Double currValor = tc.getValor();
+            Double currTotalIva = pagamentosIvasMeses.get(currMont);
+            Double ivaToPay = 0.0;
+
+            if (currValor < 20) {
+                ivaToPay = currValor * 0.12;
+            } else if (currValor >= 20 && currValor <= 29) {
+                ivaToPay = currValor * 0.2 ;
+            } else {
+                ivaToPay = currValor * 0.23;
+            }
+
+            pagamentosIvasMeses.put(currMont,currTotalIva + ivaToPay);
+        }
+
+        return new SimpleEntry<>(pagamentosIvasMeses, null);
+    };
 
 
 
@@ -662,13 +832,30 @@ public class BenchJavaStreams {
 
         // Lista dos ficheiros de dados
         List<String> files = Arrays.asList("TransCaixaResources/transCaixa1M.txt",
-                                           "TransCaixaResources/transCaixa2M.txt",
-                                           "TransCaixaResources/transCaixa4M.txt",
-                                           "TransCaixaResources/transCaixa6M.txt");
+                "TransCaixaResources/transCaixa2M.txt",
+                "TransCaixaResources/transCaixa4M.txt",
+                "TransCaixaResources/transCaixa6M.txt");
         // Load dos dados
         loadFiles(file);
 
         List<List<SimpleEntry<String, Function>>> testes = new ArrayList<>();
+
+        // TESTE 1
+        List<SimpleEntry<String, Function>> solucoesT1 = Arrays.asList(
+                new SimpleEntry<>("solucao1ForArraySum", solucao1ForArraySum),
+                new SimpleEntry<>("solucao1ForArrayAvg", solucao1ForArrayAvg),
+                new SimpleEntry<>("solucao1ForEachSum", solucao1ForEachSum),
+                new SimpleEntry<>("solucao1ForEachAvg", solucao1ForEachAvg),
+                new SimpleEntry<>("solucao1DoubleStreamSum", solucao1DoubleStreamSum),
+                new SimpleEntry<>("solucao1DoubleStreamAvg", solucao1DoubleStreamAvg),
+                new SimpleEntry<>("solucao1ParallelDoubleStreamSum", solucao1ParallelDoubleStreamSum),
+                new SimpleEntry<>("solucao1ParallelDoubleStreamAvg", solucao1ParallelDoubleStreamAvg),
+                new SimpleEntry<>("solucao1StreamSum", solucao1StreamSum),
+                new SimpleEntry<>("solucao1StreamAvg", solucao1StreamAvg),
+                new SimpleEntry<>("solucao1ParallelStreamSum", solucao1ParallelStreamSum),
+                new SimpleEntry<>("solucao1ParallelStreamSum", solucao1ParallelStreamAvg)
+        );
+        testes.add(solucoesT1);
 
         // TESTE 2
         List<SimpleEntry<String, Function>> solucoesT2 = Arrays.asList(
@@ -684,6 +871,13 @@ public class BenchJavaStreams {
                 new SimpleEntry<>("solucao3IntStream", solucao3intStream),
                 new SimpleEntry<>("solucao3List", solucao3listInteger));
         testes.add(solucoesT3);
+
+        // TESTE 5
+        List<SimpleEntry<String, Function>> solucoesT5 = Arrays.asList(
+                new SimpleEntry<>("solucao5TreeSet", solucao5TreeSet),
+                new SimpleEntry<>("solucao5SortedList", solucao5SortedList));
+        testes.add(solucoesT5);
+
 
         // TESTE 6
         List<SimpleEntry<String, Function>> solucoesT6 = Arrays.asList(
@@ -714,6 +908,20 @@ public class BenchJavaStreams {
                 new SimpleEntry<>("Streams", solucao8S),
                 new SimpleEntry<>("Parallel Streams", solucao8PS));
         //testes.add(solucoesT8);
+
+
+        // TESTE 9
+        List<SimpleEntry<String, Function>> solucoesT9 = Arrays.asList(
+                new SimpleEntry<>("solucao9SemStreams", solucao9SemStreams),
+                new SimpleEntry<>("solucao9ComUmStream", solucao9ComUmStream),
+                new SimpleEntry<>("solucao9ComDoisStreams", solucao9ComDoisStreams));
+        //testes.add(solucoesT9);
+
+        // TESTE 10
+        List<SimpleEntry<String, Function>> solucoesT10 = Arrays.asList(
+                new SimpleEntry<>("solucao10ComStream", solucao10ComStream),
+                new SimpleEntry<>("solucao10Iterativo", solucao10Iterativo));
+        //testes.add(solucoesT10);
 
         List<List<List<SimpleEntry<String, SimpleEntry<Double, SimpleEntry>>>>> resultados = runTestes(testes);
 
